fix invoice
